# lawnnav-ros2

./: README.md  core  report.md  start_path_coverage.py  start_path_coverage.sh
coverage_evaluator/: package.xml  setup.cfg  setup.py
coverage_evaluator/coverage_evaluator/: camera_coverage.py  coverage_evaluator_node.py
coverage_evaluator/launch/: coverage_evaluator.launch.py
coverage_evaluator/params/: camera_coverage_params.yaml  coverage_evaluator_params.yaml
coverage_evaluator/scripts/: run_camera_coverage.py
docs/: deprecation_list.md  development.md  packages.md  paper.md  testing_and_tuning.md  usage.md
launcher/: health_check.py  publish_region.py  region_capture.py  start.py  start.sh
path_coverage_ros2/: CMakeLists.txt  README.md  launch_ccpp.sh  使用方法.txt
radar/: multi_reduced.py  plant.py  plant_new copy.py  plant_new.py  radar_data_processor.py  serial_port_connector.py  serial_port_connectorNew.py  毫米波雷达数据格式配置.md
tools/: compare_results.py  cte_results.csv  goal1.py  goal2.py  goal3.py  goal4.py  goal_all.py  log_simplify.py  obstacle_avoidance_results.csv  obstacle_dimension_accuracy.csv  obstacle_dimension_accuracy_RAW_BACKUP.csv  odom_calibrate.py  paper_figures.py  pose_log_20260429_080351.csv  pose_log_20260504_073736.csv  pose_log_20260504_075122.csv  pose_log_20260504_080046.csv  radar_mapping.py  rpe_results.csv  run_auto_coverage_test.py  smoke_test.py  start_path_coverage.py  start_path_coverage.sh  static_stability_results.csv  test.md  test1_slam_nav_test.py  test2_measure_trajectory_error.py  test2_nav_cte_and_obstacle_test.py  (+10 more)
(+136 files in other folders)
